# graphsim

./: CMakeLists.txt
burst/: wikipedia_import.py
src/: components.h  main.c
